Some Edits And Bugs Fixed

--- a/website/index.html
+++ b/website/index.html
@@ -18,15 +18,17 @@
     <div class ="holder feel">
       <label for="feelings">How are you feeling today?</label>
       <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+    </div>
+    <div class="holder">
       <button id="generate" type = "submit"> Generate </button>
     </div>
-<br><br><br><br>
+<!-- <br><br><br><br> -->
   <div class ="holder entry">
     <div class = "title">Most Recent Entry</div>
    <div id = "entryHolder">
-    <div id = "date"></div> 
-   <div id = "temp"></div>
-   <div id = "content"></div>
+   <div class="line"><p>Date: </p><div id = "date"></div> </div>
+   <div class="line"><p>temp: </p><div id = "temp"></div></div>
+   <div class="line"><p>content: </p><div id = "content"></div></div>
   </div>
   </div>
   </div>
